# optfolio

./: .coverage.192-168-10-197.lan.8873.XEvXZBrx  .gitignore  COPYRIGHT.md  PLAN.md  README.md  api_test.py  data  debug_buy_and_hold.py  example.py  main.py  play01.ipynb  price  pyproject.toml  streamlit_app.py  test_backtesting_buy_and_hold.py  test_buy_and_hold.py  test_min_weights.py  test_num_transactions.py  test_simple.py  test_streamlit_config.py  test_upside_views.py  weight_analysis.py
examples/: black_litterman_test.py  example_bl_upside.py  simple_weight_example.py
notebooks/: play01.ipynb  sector_analysis.ipynb
optfolio/backtesting/: engine.py
optfolio/data/: basket_manager.py  loader.py  validator.py
optfolio/portfolio/: base.py  metrics.py
optfolio/strategies/: __init__.py  base.py  black_litterman.py  buy_and_hold.py  equal_weight.py  mean_variance.py  random_weight.py  upside.py
optfolio/tests/: test_basket_integration.py  test_basket_manager.py  test_data.py  test_metrics.py  test_strategies.py
pages/: dashboard.py  stock_baskets.py
sample_data/price/: AAPL.csv  GOOGL.csv  MSFT.csv
sample_data/upside/: AAPL.csv  GOOGL.csv  MSFT.csv
tests/: rolling_metrics_test.py  run_tests.py  test_buy_and_hold.py  test_integration.py  test_num_transactions.py  test_portfolio_metrics.py  test_streamlit_baskets.py  test_streamlit_config.py  test_streamlit_fix.py
